# MAIL

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  emailhub-desktop-snapshot.md  package-lock.json  package.json
apps/api/: Dockerfile
apps/api-node/: Dockerfile  package.json  tsconfig.prod.json
apps/native-engine/rust-api/: Cargo.toml  Dockerfile
apps/native-engine/rust-api/src/: lib.rs
apps/native-engine/rust-api/tests/: contracts.rs
apps/web/: Dockerfile  index.html  nginx.conf  package.json  vite.config.test.ts  vite.config.ts
apps/worker/: Dockerfile
apps/worker-node/: Dockerfile  package.json  tsconfig.prod.json
docs/: backend-architecture-decision.md  backend-micro-chain-spec.md  codex-security-scan-prompts.md  current-delivery-plan.md  frontend-ui-plan.md  kaifa-recovery-runbook.md  product-polish-plan-2026-06-18.md  security-review-2026-06-17.md  spark-like-backend-chain.md
infra/: docker-compose.hermes.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
infra/litellm/: hermes-config.yaml
research/: hermes-provider-integration-deep-dive.md  mail-client-competitive-alignment.md  open-source-email-systems.md  thunderbird-foxmail-2026-refresh.md  thunderbird-foxmail-actionable-notes.md  thunderbird-foxmail-deep-dive.md  关键开源项目架构深度分析.md  功能需求-优先级-批量导入-转移.md  国内邮箱提供商集成细节.md  批量导入与账号转移.md  智能优先级排序与收件箱 triage.md  模块调研汇总-技术方向与UI.md  自托管性能与架构补充.md  邮箱管理聚合-调研报告.md  部署模式与Docker私人部署支持.md
scripts/: check-file-size.mjs  emailhub-compose.mjs
ui-preview/: app.js  index.html  styles.css
(+694 files in other folders)
