[workspace]
members = ["apps/api", "apps/worker"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "UNLICENSED"
version = "0.1.0"

[workspace.dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
async-trait = "0.1.89"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
